raw-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-ingress
spec:
  selector:
    app: example-ingress
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: LoadBalancer
